--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=sfg-brewery-gateway
+spring.profiles.active=local-discovery
 server.port=9090
+
+logging.level.org.springframework.cloud.gateway=debug
