--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.profiles.active=local-discovery
 server.port=9090
 
 logging.level.org.springframework.cloud.gateway=debug
+
+spring.zipkin.baseUrl=http://192.168.99.100:9411/
