--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ server.port=9090
 
 logging.level.org.springframework.cloud.gateway=debug
 
-spring.zipkin.baseUrl=http://192.168.99.100:9411/
+spring.zipkin.enabled=false
